Fixed newly appeared scrollbar

--- a/app/ui/app/app-ui-widget-panel.less
+++ b/app/ui/app/app-ui-widget-panel.less
@@ -18,7 +18,7 @@
     @font-size:       12px;
 ) {
     width:      100%;
-    height:     ~"calc(100% - 24px - 15px)";
+    height:     ~"calc(100% - 24px - 16px)";
     color:      @color-tab-fg;
 
     .tabs {
